Fix cropper image cover and add tools blur bg

--- a/src/components/NewPostModal/NewPostModal.module.css
+++ b/src/components/NewPostModal/NewPostModal.module.css
@@ -90,7 +90,7 @@
   cursor: pointer;
 }
 
-:is(.toolsButton, .discardBtn) {
+:is(.toolsButton, .discardBtn, .zoomTool, .aspectRatioMenu) {
   background: rgba(0, 0, 0, 0.6);
   color: white;
   transition: opacity 0.3s;
@@ -126,7 +126,6 @@
 }
 
 .aspectRatioMenu {
-  background: rgba(0, 0, 0, 0.6);
   position: absolute;
   margin: 0;
   border-radius: 0.6rem;
@@ -165,7 +164,6 @@
 }
 
 .zoomTool {
-  background: rgba(0, 0, 0, 0.6);
   border-radius: 0.6rem;
   padding: 0.5rem;
   position: absolute;
